--- a/HW_ProfileBook/HW_ProfileBook/Views/MainList.xaml
+++ b/HW_ProfileBook/HW_ProfileBook/Views/MainList.xaml
@@ -10,7 +10,7 @@
     <ContentPage.ToolbarItems>
         <ToolbarItem Command="{Binding LogOut}" IconImageSource="ic_exit_to_app.png" />
 
-        <ToolbarItem IconImageSource="ic_settings.png" />
+        <ToolbarItem Command ="{Binding Settings}" IconImageSource="ic_settings.png" />
 
     </ContentPage.ToolbarItems>
 
