--- a/HW_ProfileBook/HW_ProfileBook/Views/SignIn.xaml
+++ b/HW_ProfileBook/HW_ProfileBook/Views/SignIn.xaml
@@ -4,8 +4,8 @@
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:prism="http://prismlibrary.com"
-    prism:ViewModelLocator.AutowireViewModel="True"
-    Title="{Binding Title}">
+    Title="{Binding Title}"
+    prism:ViewModelLocator.AutowireViewModel="True">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="3*" />
@@ -33,8 +33,7 @@
                 BackgroundColor="DarkOrange"
                 Command="{Binding NavigateToMainList}"
                 CornerRadius="10"
-                Text="Sign in" 
-                />
+                Text="Sign in" />
 
             <Label HorizontalOptions="Center">
 
