Added dialog for changes image. Сleared the code of unused lines.

--- a/HW_ProfileBook/HW_ProfileBook/Views/AddEditProfile.xaml
+++ b/HW_ProfileBook/HW_ProfileBook/Views/AddEditProfile.xaml
@@ -22,7 +22,11 @@
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
 
-        <Image Grid.Row="0" Source="pic_profile.png" />
+        <Image Grid.Row="0" Source="pic_profile.png">
+            <Image.GestureRecognizers>
+                <TapGestureRecognizer Command="{Binding ChangeImage}" />
+            </Image.GestureRecognizers>
+        </Image>
 
         <Entry
             Grid.Row="1"
