--- a/HW_ProfileBook/HW_ProfileBook/Views/AddEditProfile.xaml
+++ b/HW_ProfileBook/HW_ProfileBook/Views/AddEditProfile.xaml
@@ -22,7 +22,7 @@
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
 
-        <Image Grid.Row="0" Source="pic_profile.png">
+        <Image Grid.Row="0" Source="{Binding ProfileImage}">
             <Image.GestureRecognizers>
                 <TapGestureRecognizer Command="{Binding ChangeImage}" />
             </Image.GestureRecognizers>
