--- a/HW_ProfileBook/HW_ProfileBook/Views/MainList.xaml
+++ b/HW_ProfileBook/HW_ProfileBook/Views/MainList.xaml
@@ -5,7 +5,8 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:prism="http://prismlibrary.com"
     Title="{Binding Title}"
-    prism:ViewModelLocator.AutowireViewModel="True">
+    prism:ViewModelLocator.AutowireViewModel="True"
+    BackgroundColor="{DynamicResource WindowBackgroundColor}">
 
     <ContentPage.ToolbarItems>
         <ToolbarItem Command="{Binding LogOut}" IconImageSource="ic_exit_to_app.png" />
