--- a/HW_ProfileBook/HW_ProfileBook/Views/SignIn.xaml
+++ b/HW_ProfileBook/HW_ProfileBook/Views/SignIn.xaml
@@ -5,7 +5,8 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:prism="http://prismlibrary.com"
     Title="{Binding Title}"
-    prism:ViewModelLocator.AutowireViewModel="True">
+    prism:ViewModelLocator.AutowireViewModel="True"
+    BackgroundColor="{DynamicResource WindowBackgroundColor}">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="3*" />
@@ -17,12 +18,18 @@
             Margin="25"
             VerticalOptions="Center">
 
-            <Entry Placeholder="Login" Text="{Binding UserLogin}" />
+            <Entry
+                BackgroundColor="{DynamicResource EntryBackgroundColor}"
+                Placeholder="Login"
+                Text="{Binding UserLogin}"
+                TextColor="{DynamicResource EntryTextColor}" />
 
             <Entry
+                BackgroundColor="{DynamicResource EntryBackgroundColor}"
                 IsPassword="True"
                 Placeholder="Password"
-                Text="{Binding UserPassword}" />
+                Text="{Binding UserPassword}"
+                TextColor="{DynamicResource EntryTextColor}" />
         </StackLayout>
 
         <StackLayout
@@ -30,7 +37,7 @@
             Margin="25"
             VerticalOptions="Center">
             <Button
-                BackgroundColor="DarkOrange"
+                BackgroundColor="Orange"
                 Command="{Binding NavigateToMainList}"
                 CornerRadius="10"
                 Text="Sign in" />
