--- a/HW_ProfileBook/HW_ProfileBook/Views/SignUp.xaml
+++ b/HW_ProfileBook/HW_ProfileBook/Views/SignUp.xaml
@@ -5,7 +5,8 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:prism="http://prismlibrary.com"
     Title="{Binding Title}"
-    prism:ViewModelLocator.AutowireViewModel="True">
+    prism:ViewModelLocator.AutowireViewModel="True"
+    BackgroundColor="{DynamicResource WindowBackgroundColor}">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="3*" />
@@ -16,17 +17,25 @@
             Margin="25"
             VerticalOptions="Center">
 
-            <Entry Placeholder="Login" Text="{Binding UserLogin}" />
+            <Entry
+                BackgroundColor="{DynamicResource EntryBackgroundColor}"
+                Placeholder="Login"
+                Text="{Binding UserLogin}"
+                TextColor="{DynamicResource EntryTextColor}" />
 
             <Entry
+                BackgroundColor="{DynamicResource EntryBackgroundColor}"
                 IsPassword="True"
                 Placeholder="Password"
-                Text="{Binding UserPassword}" />
+                Text="{Binding UserPassword}"
+                TextColor="{DynamicResource EntryTextColor}" />
 
             <Entry
+                BackgroundColor="{DynamicResource EntryBackgroundColor}"
                 IsPassword="True"
                 Placeholder="Confirm password"
-                Text="{Binding ConfirmUserPassword}" />
+                Text="{Binding ConfirmUserPassword}"
+                TextColor="{DynamicResource EntryTextColor}" />
         </StackLayout>
 
         <StackLayout Grid.Row="1" VerticalOptions="Center">
