Added second language in app (russian), default language is english.

--- a/HW_ProfileBook/HW_ProfileBook/Views/AddEditProfile.xaml
+++ b/HW_ProfileBook/HW_ProfileBook/Views/AddEditProfile.xaml
@@ -4,7 +4,8 @@
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:prism="http://prismlibrary.com"
-    Title="{Binding Title}"
+    xmlns:resource="clr-namespace:HW_ProfileBook.Resource"
+    Title="{x:Static resource:Resource.Add_Profile}"
     prism:ViewModelLocator.AutowireViewModel="True">
 
     <ContentPage.ToolbarItems>
@@ -14,13 +15,7 @@
             Order="Primary" />
     </ContentPage.ToolbarItems>
 
-    <Grid Margin="35,10,35,35">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="*" />
-            <RowDefinition Height=".5*" />
-            <RowDefinition Height=".5*" />
-            <RowDefinition Height="*" />
-        </Grid.RowDefinitions>
+    <Grid Margin="35,10,35,35" RowDefinitions="*, 0.5*, 0.5*, *">
 
         <Image Grid.Row="0" Source="{Binding ProfileImage}">
             <Image.GestureRecognizers>
@@ -30,12 +25,12 @@
 
         <Entry
             Grid.Row="1"
-            Placeholder="Nick name"
+            Placeholder="{x:Static resource:Resource.Nick_name}"
             Text="{Binding NickName}"
             VerticalOptions="End" />
         <Entry
             Grid.Row="2"
-            Placeholder="Name"
+            Placeholder="{x:Static resource:Resource.Name}"
             Text="{Binding Name}"
             VerticalOptions="Center" />
 
@@ -43,6 +38,7 @@
         <Editor
             Grid.Row="3"
             BackgroundColor="LightGray"
+            Placeholder="{x:Static resource:Resource.Description}"
             Text="{Binding Description}" />
     </Grid>
 </ContentPage>
