--- a/HW_ProfileBook/HW_ProfileBook/Views/MainList.xaml
+++ b/HW_ProfileBook/HW_ProfileBook/Views/MainList.xaml
@@ -4,7 +4,8 @@
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:prism="http://prismlibrary.com"
-    Title="{Binding Title}"
+    xmlns:resource="clr-namespace:HW_ProfileBook.Resource"
+    Title="{x:Static resource:Resource.Main_List}"
     prism:ViewModelLocator.AutowireViewModel="True"
     BackgroundColor="{DynamicResource WindowBackgroundColor}">
 
@@ -34,11 +35,11 @@
                                     <MenuItem
                                         Command="{Binding BindingContext.EditProfile, Source={x:Reference ListProfiles}}"
                                         CommandParameter="{Binding .}"
-                                        Text="Edit" />
+                                        Text="{x:Static resource:Resource.Edit}" />
                                     <MenuItem
                                         Command="{Binding BindingContext.DeleteProfile, Source={x:Reference ListProfiles}}"
                                         CommandParameter="{Binding .}"
-                                        Text="Delete" />
+                                        Text="{x:Static resource:Resource.Delete}" />
                                 </ViewCell.ContextActions>
                                 <StackLayout Orientation="Horizontal">
                                     <Image Source="{Binding ProfileImage}" />
